# unprompt

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
docs/: api.rst  conf.py  index.rst  releases.rst
docs/_templates/: module.rst
requirements/: dev.in  dev.txt  docs.in  docs.txt  tests.txt
src/unprompt/: __init__.py  __main__.py  prompt.py
tests/: test_ask.py
